fixes bug 243151 "Bogus assertion: nsThread::kIThreadSelfIndex != 0" r=timeless,wtc